# count_primes

./: .gitignore  .gitmodules  CMakeLists.txt  Program.cs  README.md  count_primes.kdev4
.kdev4/: count_primes.kdev4
src/: Logger.cpp  Logger.h  main.cpp
